<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_list_background"
    android:layout_width="match_parent"
    android:layout_height="@dimen/px120"
    android:background="#ffbbbbbb"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/index"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center_horizontal"
        android:text="@string/number"
        android:textColor="#ff343434"
        android:textSize="@dimen/sp48" />

    <View
        android:layout_width="@dimen/px3"
        android:layout_height="@dimen/px1" />

    <TextView
        android:id="@+id/id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:gravity="center_horizontal"
        android:text="@string/id"
        android:textColor="@color/list_item_admin_list_type_1_id"
        android:textSize="@dimen/sp48"
        />

    <View
        android:layout_width="@dimen/px3"
        android:layout_height="@dimen/px1" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:text="@string/name"
        android:textColor="#ff343434"
        android:textSize="@dimen/sp48"
        />

    <View
        android:layout_width="@dimen/px3"
        android:layout_height="@dimen/px1" />

    <TextView
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:text="@string/age"
        android:textColor="#ff343434"
        android:textSize="@dimen/sp48"
        />

</LinearLayout>