<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/px120"
    android:background="#30898b75"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/gender"
        android:textColor="#ff000000"
        android:textSize="@dimen/sp54"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center_horizontal"
        android:text="@string/level"
        android:textColor="#ff000000"
        android:textSize="@dimen/sp54"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/rating"
        android:textColor="#ff000000"
        android:textSize="@dimen/sp54"
        android:textStyle="bold" />

</LinearLayout>