<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/admin_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px144"
        android:background="#ff0066af" >

        <TextView
            android:id="@+id/admin_measure_item_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/admin_list_1"
            android:textColor="#ffffffff"
            android:textSize="@dimen/sp75"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- listview title -->

    <LinearLayout
        android:id="@+id/admin_measure_item_list_top_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px120"
        android:background="#ffbbbbbb"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <!--
             <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center_horizontal"
            android:text="@string/number"
            android:textColor="#ff000000"
            android:textSize="@dimen/sp48"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/px3"
            android:layout_height="@dimen/px50"
            android:background="#ff5f6160" />
        -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center_horizontal"
            android:text=""
            android:textColor="#ff000000"
            android:textSize="@dimen/sp48"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/px3"
            android:layout_height="@dimen/px50" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center_horizontal"
            android:text="@string/id"
            android:textColor="#ff000000"
            android:textSize="@dimen/sp48"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/px3"
            android:layout_height="@dimen/px50"
            android:background="#ff5f6160" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textColor="#ff000000"
            android:textSize="@dimen/sp48"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/px3"
            android:layout_height="@dimen/px50"
            android:background="#ff5f6160" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:text="@string/age"
            android:textColor="#ff000000"
            android:textSize="@dimen/sp48"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px144"
        android:layout_gravity="bottom"
        android:background="#ff9d9d9d"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/admin_item_list_type_1_write_do"
            android:layout_width="0dp"
            android:layout_height="@dimen/px144"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/px50"
            android:layout_weight="1"
            android:text="@string/write_do"
            android:textColor="#ff000000"
            android:textSize="@dimen/sp54"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>