<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/admin_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px144"
        android:background="#ff0066af" >

        <TextView
            android:id="@+id/admin_measure_item_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/admin_item_settings_title"
            android:textColor="#ffffffff"
            android:textSize="@dimen/sp75"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/admin_measure_item_list_top_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px120"
        android:background="#ff9d9d9d"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <View
            android:layout_width="@dimen/px3"
            android:layout_height="@dimen/px60"
            android:background="#ff0066af" />

        <TextView
            android:id="@+id/admin_measurement_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center_horizontal"
            android:text="@string/measurement_type"
            android:textColor="#ff0066af"
            android:textSize="@dimen/sp60"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/px3"
            android:layout_height="@dimen/px60"
            android:background="#ff0066af" />

        <TextView
            android:id="@+id/admin_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center_horizontal"
            android:text="@string/age"
            android:textColor="#ff0066af"
            android:textSize="@dimen/sp60"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px144"
        android:layout_gravity="bottom"
        android:background="#ff9d9d9d"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/admin_item_list_write"
            android:layout_width="0dp"
            android:layout_height="@dimen/px144"
            android:layout_weight="1"
            android:text="@string/write"
            android:textColor="#ff000000"
            android:textSize="@dimen/sp54"
            android:textStyle="bold" />

        <Button
            android:id="@+id/admin_item_list_delete"
            android:layout_width="0dp"
            android:layout_height="@dimen/px144"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/px50"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="#ff000000"
            android:textSize="@dimen/sp54"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>